Fixed right margin on mobile

--- a/css/general.scss
+++ b/css/general.scss
@@ -33,6 +33,10 @@ h3 {
   margin-top: 0px;
 }
 
+.no-right-margin {
+  margin-right: 0px;
+}
+
 .introduction {
   .mini-bio {
     p {
